# solana-market-place

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  render.yaml
backend/: Dockerfile  README.md  db.sqlite3  manage.py  requirements.txt
backend/core/: asgi.py  settings.py
backend/solana_auth_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/systems/: admin.py  consumers.py  listeners.py  models.py  parser.py  permissions.py  routing.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/systems/migrations/: 0006_rename_telegram_coin_discord_remove_trade_id_and_more.py  0007_alter_coin_image_url.py  0008_remove_coindrcscore_audit_completed_and_more.py  0009_remove_coindrcscore_trade_volume_24h_and_more.py  0010_delete_coinrugflag.py  0011_coin_ath_coindrcscore_successful_token.py  0012_remove_traderscore_avg_holding_time_hours_and_more.py  0013_coin_score.py  0014_developerscore_no_rugs_count.py  0015_alter_trade_coin_amount_alter_trade_sol_amount.py  0016_coin_decimal.py  0017_remove_coin_decimal_coin_decimals.py  0018_coin_price_per_token.py
backend/systems/utils/: broadcast.py
backend/wallet_auth/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/wallet_auth/migrations/: 0001_initial.py  0002_remove_coin_total_amount_held_coin_current_price_and_more.py  (+4 more)
frontend/: package.json
my-react-app/: .env  .gitignore  README.md  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
my-react-app/src/: App.tsx  env.d.ts  index.css  main.tsx
src/: lib.rs
(+42 files in other folders)
